--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-webpack-project",
+  "name": "calm-blog",
   "version": "1.0.0",
   "description": "My webpack project",
   "private": true,
@@ -17,15 +17,15 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Tanya8135/webpack.git"
+    "url": "git+https://github.com/Tanya8135/Calm-blog.git"
   },
   "keywords": [],
   "author": "Tanya8135",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Tanya8135/webpack/issues"
+    "url": "https://github.com/Tanya8135/Calm-blog.git/issues"
   },
-  "homepage": "https://github.com/Tanya8135/webpack",
+  "homepage": "https://github.com/Tanya8135/Calm-blog.git",
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
