--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calm-blog",
   "version": "1.0.0",
-  "description": "My webpack project",
+  "description": "blog site",
   "private": true,
   "scripts": {
     "start": "webpack serve --open --mode development --port 8080",
