--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^10.4.12",
     "babel-loader": "^8.3.0",
     "css-loader": "^6.7.1",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "imagemin": "^8.0.1",
     "imagemin-webpack-plugin": "^2.4.2",
