--- a/package.json
+++ b/package.json
@@ -33,12 +33,17 @@
     "@webpack-cli/generators": "^3.0.7",
     "autoprefixer": "^10.4.12",
     "babel-loader": "^8.3.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "^5.5.3",
+    "image-webpack-loader": "^8.1.0",
     "imagemin": "^8.0.1",
+    "imagemin-webp": "^8.0.0",
+    "imagemin-webp-webpack-plugin": "^3.3.6",
     "imagemin-webpack-plugin": "^2.4.2",
-    "mini-css-extract-plugin": "^2.6.1",
+    "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.17",
     "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
@@ -52,7 +57,6 @@
   },
   "dependencies": {
     "body-scroll-lock": "^4.0.0-beta.0",
-    "copy-webpack-plugin": "^11.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
