--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "body-scroll-lock": "^4.0.0-beta.0",
     "lodash": "^4.17.21",
+    "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swiper": "^11.0.4"
