--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss": "^8.4.17",
     "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
+    "raw-loader": "^4.0.2",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.1",
@@ -56,7 +57,8 @@
   },
   "dependencies": {
     "body-scroll-lock": "^4.0.0-beta.0",
-    "html-loader": "^4.2.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "html-loader": "^2.1.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
