--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 
 node_modules/
 
+#Junk
+.vscode/
 
 swiperJS.js
 slickSliderDraft.js
@@ -43,7 +45,6 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
-.vscode/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
