--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
+    "@mojs/core": "^1.7.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "clean-webpack-plugin": "^4.0.0",
     "html-loader": "^2.1.0",
